--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
    <title>Mirror Tecnologia.</title>
    </head>
- <body>
+ <body bgcolor="blue">
 
-    <h1>Mirror Tecnologia.</h1>
-    <h2>Bem-vindo à Mirror Tecnologia, sua loja de informática e acessórios.</h2>
+    <h1><font color="red"Mirror Tecnologia.</font color></h1>
+    <h2><font face="arial">Bem-vindo à Mirror Tecnologia, sua loja de informática e acessórios.</font></h2>
 
     <p><b>Confira</b> nossas <small>promoções.</small></p>
     <p><i>Receba informações sobre nossos laçamentos por e-mail.</i></p>
